fix manifest