@@ -74,13 +74,17 @@ application {
     mainClass = 'robot.configuration.main.App'
 
     applicationDefaultJvmArgs = [
+        '--add-modules', 'javafx.controls,javafx.fxml',
         '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
         '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
-        '--add-exports', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED' // Allow access to quantum package
+        '--add-exports', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED'
     ]
 }
 
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+jar {
+    manifest {
+        attributes(
+            'Main-Class': 'robot.configuration.main.App' // <-- Update to match above
+        )
+    }
 }
